<resources>
    <string name="app_name">Afghan Keyboard</string>

    <string name="ime_name">Afghan Keyboard</string>

    <!-- Symbols that are commonly considered word separators in this language -->
    <string name="word_separators">\u0020.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;</string>

    <!-- Labels on soft keys -->
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_send_key">Send</string>

    <!-- Labels for subtype -->
    <string name="label_subtype_generic">%s</string>
    <string name="label_subtype_en_GB">English (GB)</string>
    <string name="pashto_latin_label">Pashto Latin</string>
    <string name="pashto_phonetic_label">Pashto Phonetic</string>

    <!-- Titles for ImePreference -->
    <string name="settings_name">Afghan Keyboard Settings</string>
    <string name="language_selection_title">Input languages</string>
    <string name="select_language">Select input languages</string>
    <string name="general_category">General</string>

    <!-- Database strings -->
    <string name="database_name">database.sqlite</string>
    <string name="en_table_name">en_table</string>
    <string name="pa_table_name">pa_table</string>
    <string name="fa_table_name">fa_table</string>
    <string name="freq_column">freq</string>
    <string name="word_column">word</string>

    <string name="sound">Sound on keypress</string>
    <string name="show_suggestions">Show suggestions</string>

    <string name="banner_unitID">ca-app-pub-6404264627814552/8236146819</string>
    <string name="interstitial_unitID">ca-app-pub-6404264627814552/5366440892</string>

    <string name="enable_in_settings">ENABLE</string>
    <string name="add_languages">LANGUAGES</string>
    <string name="choose_input_method">INPUT</string>
    <string name="choose_theme">THEMES</string>
    <string name="dictionaries">Dictionaries</string>
    <string name="manage_dictionaries">Manage Dictionaries</string>
    <string name="search_word">Search Word</string>
    <string name="search">Search</string>
    <string name="about">About</string>
    <string name="choose_theme_title">Keyboard Themes</string>
    <string name="test_the_keyboard_here">Test the keyboard here.</string>
    <string name="search_description">Search for a word and remove it from prediction.</string>
    <string name="search_hint_toast">Please enter a word for a search!</string>
    <string name="no_result">The word does not exist in the dictionary!</string>
    <string name="about_info"><![CDATA[Afghan Keyboard is a complete solution for both Pashto and Dari (Farsi) Afghanistan national languages along with native numbers and symbols. The application also has English keyboard (letters, numbers & symbols) and Pashto Latin keyboard. This keyboard is built-in which enables users to type Pashto, Pashto Latin, Dari (Farsi) or English letters in any Android application.\n\nThe application is developed based on recommendations and reviews received on our Pashto Keyboard, therefore we highly recommend to post your reviews to help us serve you best.\n\nSend us an email at info@sunzala.com, if you have any concerns.]]></string>
    <string name="removed_word">The word is removed from the dictionary!</string>
</resources>
