<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingTop="60dp">

    <LinearLayout
        android:id="@+id/layout_EnableSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_keyboard_48dp"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/enable_settings_textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical|start"
            android:minWidth="@dimen/button_minWidth"
            android:text="@string/enable_in_settings"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal|bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_AddLanguages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_EnableSetting"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_language_48dp"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/add_languages"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical|start"
            android:minWidth="@dimen/button_minWidth"
            android:text="@string/add_languages"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal|bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_ChooseInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_AddLanguages"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_create_48dp"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/choose_input_textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical|start"
            android:minWidth="@dimen/button_minWidth"
            android:text="@string/choose_input_method"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal|bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_ChooseTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_ChooseInput"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_palette_48dp"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/choose_theme_textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical|start"
            android:minWidth="@dimen/button_minWidth"
            android:text="@string/choose_theme"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal|bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_dictionary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_ChooseTheme"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_palette_48dp"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/dictionary"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical|start"
            android:minWidth="@dimen/button_minWidth"
            android:text="@string/choose_theme"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal|bold" />

    </LinearLayout>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_unitID" />

</RelativeLayout>